force-app/main/default/objects/Donor_Overview__c/Donor_Overview__c.object-meta.xml
<CustomObject>
    <label>Donatore per Programma</label>
    <nameField>
        <label>Donor Overview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Donatori per Programma</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>