force-app/main/default/objects/Donor_Overview__c/fields/Not_Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Not_Invoiced_Amount__c</fullName>
    <formula>Total_Donation_Amount_formula__c -  Total_Invoice_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Invoiced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>