force-app/main/default/objects/Donor_Overview__c/fields/Programma__c.field-meta.xml
<CustomField>
    <fullName>Programma__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programma</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Overview Donatori</relationshipLabel>
    <relationshipName>Overview_Donatori</relationshipName>
    <type>Lookup</type>
</CustomField>