force-app/main/default/objects/Donor_Overview__c/fields/Total_Donation_Amount_formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Donation_Amount_formula__c</fullName>
    <label>Total Donation Amount</label>
    <summarizedField>Reporting_Year__c.Current_Year_Donation_Amount__c</summarizedField>
    <summaryForeignKey>Reporting_Year__c.Donor_Overview__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>