force-app/main/default/objects/Donor_Overview__c/fields/Total_Donation_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Donation_Number__c</fullName>
    <label>Total Donation Number</label>
    <summarizedField>Reporting_Year__c.Current_Year_Donation_Number__c</summarizedField>
    <summaryForeignKey>Reporting_Year__c.Donor_Overview__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>