force-app/main/default/objects/Donor_Overview__c/fields/Total_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Amount__c</fullName>
    <label>Total Invoice Amount</label>
    <summarizedField>Reporting_Year__c.Total_Invoice_Amount__c</summarizedField>
    <summaryForeignKey>Reporting_Year__c.Donor_Overview__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>