force-app/main/default/objects/Donor_Overview__c/fields/Total_Original_Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Original_Donation_Amount__c</fullName>
    <label>Total_Original_Donation_Amount</label>
    <summarizedField>Reporting_Year__c.Ammontare_Originale_Donato_Anno_Corrente__c</summarizedField>
    <summaryForeignKey>Reporting_Year__c.Donor_Overview__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>