force-app/main/default/objects/Donor_Overview__c/fields/Totale_Numero_di_Biglietti__c.field-meta.xml
<CustomField>
    <fullName>Totale_Numero_di_Biglietti__c</fullName>
    <label>Totale Numero di Biglietti</label>
    <summarizedField>Reporting_Year__c.Totale_Numero_di_Biglietti__c</summarizedField>
    <summaryForeignKey>Reporting_Year__c.Donor_Overview__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>