force-app/main/default/objects/Donor_Overview__c/listViews/Donatori_Tempo_Sospeso.listView-meta.xml
<ListView>
    <fullName>Donatori_Tempo_Sospeso</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Programma__c</columns>
    <columns>Total_Donation_Amount_formula__c</columns>
    <columns>Total_Donation_Number__c</columns>
    <columns>Total_Invoice_Amount__c</columns>
    <columns>Total_Visits_Done__c</columns>
    <columns>Total_Minutes_of_Visits__c</columns>
    <columns>Not_Invoiced_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Programma__c</field>
        <operation>equals</operation>
        <value>Tempo Sospeso</value>
    </filters>
    <label>Donatori Tempo Sospeso</label>
</ListView>